2008-03-13  Philippe Brochard  <hocwp@free.fr>

	* clfswm-util.lisp (force-window-in-group/force-window-center-in-group):
	new functions.

2008-03-11  Philippe Brochard  <hocwp@free.fr>

	* clfswm-util.lisp (identify-key): Display the documentation
	associated to keys when identifying a key.

2008-03-10  Xavier Maillard  <xma@gnu.org>

	* contrib/clfswm: Complete rewrite of the script. Detect error and
	act accordingly. Add command line arguments to configure the
	script execution. User can now choose different common lisp
	implementation (clisp and sbcl only), choose where to store the
	dumped image, where to find clfswm source.

2008-03-09  Philippe Brochard  <hocwp@free.fr>

	* clfswm-internal.lisp (process-new-window): Beginning of new
	window hook: each group have a hook to tell what he wants to do
	with the new created window.

2008-03-08  Xavier Maillard  <xma@gnu.org>

	* contrib/clfswm: New script. Dump a CLISP image of CLFSWM then
 	call the resulting executable.

	* clfswm.lisp (read-conf-file): Check for the user config file in
	XDG_CONFIG_HOME *first*. Freedesktop.org standards should be
	prefered whenever possible.

2008-02-27  Philippe Brochard  <hocwp@free.fr>

	* clfswm-layout.lisp (*-layout): Add an optional raise-p
	parameter in each layout.

2008-02-26  Philippe Brochard  <hocwp@free.fr>

	* clfswm-util.lisp (copy/cut-current-child): Does not affect the
	root group.
	(copy/move-current-child-by-name/number): new functions
	(focus-group-by-name/number): new functions
	(delete-group-by-name/number): new functions

2008-02-24  Philippe Brochard  <hocwp@free.fr>

	* *: Major update - No more reference  to workspaces. The main
	structure is a tree of groups or application windows.

2008-02-07  Philippe Brochard  <hocwp@free.fr>

	* clfswm.lisp (read-conf-file): Read configuration in
	$HOME/.clfswmrc or in /etc/clfswmrc or in
	$XDG_CONFIG_HOME/clfswm/clfswmrc.
	(xdg-config-home): Return the content of $XDG-CONFIG-HOME (default
	to $HOME/.config/).
