@@ -1,3 +1,8 @@
+2008-03-14  Philippe Brochard  <hocwp@free.fr>
+
+	* bindings-second-mode.lisp ("ISO_Left_Tab"): Use ISO_Left_Tab
+	instead of Tab for select-previous-child.
+
 2008-03-13  Philippe Brochard  <hocwp@free.fr>
 
 	* clfswm-util.lisp (force-window-in-group/force-window-center-in-group):
